--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -44,6 +44,10 @@
     margin-bottom: var(--mb-2-5);
 }
 
+.about__button {
+    cursor: pointer;
+}
+
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
 @media screen and (max-width: 992px) {
