--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -7,8 +7,9 @@
 .skills__content {
     background-color: var(--container-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
-    padding: 2rem 4rem;
-    border-radius: 1.25rem;
+    padding: 2rem 3rem;
+    border-radius: 1.25rem 2rem;
+    
 }
 
 .skills__title {
@@ -26,6 +27,7 @@
 
 .skills__group {
     display: grid;
+    grid-template-columns: 2fr 1fr;
     align-items: flex-start;
     row-gap: 1rem;
 }
@@ -65,7 +67,7 @@
         grid-template-columns: 1fr;
     }
     .skills__content {
-        padding: 1.5rem;
+        padding: 1.5rem 2.5rem;
     }
   }
   
