--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -1,3 +1,25 @@
+.work__filters {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 0.75rem;
+    margin-bottom: var(--mb-2);
+}
+
+.work__item {
+    cursor: pointer;
+    color: var(--title-color);
+    padding: 0.25rem 0.75rem;
+    font-weight: var(--font-medium);
+    border-radius: 0.5rem;
+    text-transform: capitalize;
+}
+
+.work__item:hover {
+    background-color: var(--title-color);
+    color: var(--container-color);
+}
+
 .work__container {
     grid-template-columns: repeat(2, max-content);
     gap: 3rem;
@@ -38,6 +60,12 @@
 
 .work__button:hover .work__button-icon {
     transform: translateX(0.25rem);
+}
+
+/*active work*/
+.active-work {
+    background-color: var(--title-color);
+    color: var(--container-color);
 }
 
 /*=============== BREAKPOINTS ===============*/
@@ -81,5 +109,7 @@
     .work__item {
         font-size: var(--small-font-size);
     }
-
+    .work__filters {
+        column-gap: 0.25rem;
+    }
   }
