--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -29,7 +29,7 @@
     margin-bottom: var(--mb-0-25);
 }
 
-.home__hand {
+.nerd {
     width: 38px;
     height: 38px;
     margin-left: 0.4rem;
@@ -59,7 +59,7 @@
 }
 
 .home__img {
-    background: url(../../assets/assets/EthenRoth.JPG);
+    background: url(../../assets/assets/EthenRoth.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -122,7 +122,7 @@
         grid-template-columns: 100px repeat(2, 1fr);
         column-gap: 1.25rem;
     }
-    .home__hand {
+    .nerd {
         width: 26px;
         height: 26px;
     }
@@ -182,7 +182,7 @@
         width: 180px;
         height: 180px;
     }
-    .home__hand {
+    .nerd {
         width: 22px;
         height: 22px;
     }
