--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -26,6 +26,11 @@
     justify-content: center;
 }
 
+.link__container {
+    display: flex;
+    justify-content: space-between;
+}
+
 .work__card {
     background-color: var(--container-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
