--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -23,6 +23,7 @@ h3 {
     font-weight: var(--font-medium);
     border-radius: 0.5rem;
     text-transform: capitalize;
+    
 }
 
 .work__item:hover {
@@ -41,6 +42,8 @@ h3 {
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 1.25rem;
     border-radius: 1rem;
+
+    
 }
 
 .work__img {
@@ -59,6 +62,12 @@ h3 {
 .link__container {
     display: flex;
     justify-content: space-between;
+}
+
+.link__container1 {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 3rem;
 }
 
 .work__button {
@@ -87,6 +96,12 @@ h3 {
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
 @media screen and (max-width: 992px) {
+    .link__container1 {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 0rem;
+    }
+
     .work__container {
         gap: 1.25rem;
     }
