--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -66,9 +66,10 @@
     box-shadow: inset 0 0 0 9px rgb(255 255 255 / 30%);
     order: 1;
     justify-self: center;
-    width: 300px;
-    height: 300px;
+    width: 18.75rem;
+    height: 18.75rem;
     animation: profile__animate 8s ease-in-out infinite 1s;
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
 }
 
 @keyframes profile__animate {
@@ -150,8 +151,8 @@
         margin-bottom: var(--mb-2-5);
     }
     .home__img {
-        width: 250px;
-        height: 250px;
+        width: 15.625rem;
+        height: 15.625rem;
         box-shadow: inset 0 0 0 8px rgb(255 255 255 / 30%);
     }
     .home__scroll {
@@ -165,20 +166,16 @@
         grid-template-columns: 0.5fr 3fr;
         padding-top: 3.5rem;
     }
-
-    .home__img {
-        order: initial;
-        justify-self: initial;
-    }
-
     .home__data {
         grid-column: 1/3;
     }
 
     .home__img {
         box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%);
-        width: 200px;
-        height: 200px;
+        width: 12.5rem;
+        height: 12.5rem;
+        order: initial;
+        justify-self: initial;
     }
 
     .home__scroll {
@@ -189,8 +186,8 @@
   /* For small devices */
   @media screen and (max-width: 350px) {
     .home__img {
-        width: 180px;
-        height: 180px;
+        width: 11.25rem;
+        height: 11.25rem;
     }
     .nerd {
         width: 22px;
