--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,13 +1,15 @@
 .about__container {
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
+    /* align-items: center; */
     column-gap: 4rem;
+    display: flex;
 }
 
 .about__img {
-    width: 350px;
+    width: 21.875rem;
     border-radius: 1.5rem;
-    justify-self: center;
+    margin-left: 10rem;
+    margin-bottom: var(--mb-2);
+    margin-right: auto;
 }
 
 .about__info {
@@ -51,13 +53,25 @@
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
 @media screen and (max-width: 992px) {
-    .about__container {
-        grid-template-columns: 1fr;
-        row-gap: 2.5rem;
-    }
     .about__img {
-        width: 220px;
+        width: 18.75rem;
+        margin-left: auto;
+        margin-bottom: var(--mb-2);
+        text-align: center;
+        margin-right: 2rem;
     }
+
+    .about__container {
+        /* align-items: center; */
+        column-gap: 4rem;
+        display: flex;
+    }
+
+    .about__grid {
+        display: grid;
+        gap: 1.0rem;
+    }
+
     .about__box {
         padding: 0.75rem 0.5rem;
     }
@@ -71,6 +85,9 @@
         padding: 0 5rem;
         margin-bottom: 2rem;
     }
+  }
+
+  @media screen and (max-width: 768px) {
   }
   
   /* For medium devices */
