--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -114,17 +114,23 @@
      color: var(--title-color);
 }
 
-.logo {
-    width: 2rem;
-    height: 2rem;
-    padding: 0 var(--mb-0-25);
-}
-
 .logo__container {
     display: flex;
     align-items: center;
     margin-top: var(--mb-1-5);
 }
+
+.logo {
+        width: 2rem;
+        height: 2rem;
+        padding: 0 var(--mb-0-25);
+    }
+
+    .project__logo {
+        width: 3rem;
+        height: 3rem;
+        padding: 0 var(--mb-0-25);
+    }
 
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
@@ -162,6 +168,7 @@
   
   /* For medium devices */
   @media screen and (max-width: 768px) {
+
     .home__content {
         grid-template-columns: 0.5fr 3fr;
         padding-top: 3.5rem;
