--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -1,146 +1,213 @@
 h3 {
-    margin: 0;
+  margin: 0;
 }
 
-.work__desc { 
-    width: 18rem;
-    margin-bottom: var(--mb-0-5);
-    font-size: var(--small-font-size);
+.work__desc {
+  margin-bottom: var(--mb-0-5);
+  font-size: .83rem;
 }
 
 .work__filters {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    column-gap: 0.75rem;
-    margin-bottom: var(--mb-2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 0.75rem;
+  margin-bottom: var(--mb-2);
 }
 
 .work__item {
-    cursor: pointer;
-    color: var(--title-color);
-    padding: 0.25rem 0.75rem;
-    font-weight: var(--font-medium);
-    border-radius: 0.5rem;
-    text-transform: capitalize;
-    
+  cursor: pointer;
+  color: var(--title-color);
+  padding: 0.25rem 0.75rem;
+  font-weight: var(--font-medium);
+  border-radius: 0.5rem;
+  text-transform: capitalize;
 }
 
 .work__item:hover {
-    background-color: var(--title-color);
-    color: var(--container-color);
+  background-color: var(--title-color);
+  color: var(--container-color);
 }
 
 .work__container {
-    grid-template-columns: repeat(2, max-content);
-    gap: 3rem;
-    justify-content: center;
+  grid-template-columns: repeat(2, max-content);
+  gap: 3rem;
+  justify-content: center;
 }
 
 .work__card {
+    display: flex;
+    flex-direction: row;
+    gap: 8rem;
     background-color: var(--container-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
-    padding: 1.25rem;
+    padding: 2rem;
     border-radius: 1rem;
-
-    
+    margin-bottom: var(--mb-2);
+    box-shadow: 0 0 10px rgba(0,0,0,.1);
 }
 
 .work__img {
-    width: 295px;
-    border-radius: 1rem;
-    margin-bottom: var(--mb-1);
-    justify-content: center;
+  width: 25rem;
+  border-radius: 1rem;
+  margin-bottom: var(--mb-1);
+  justify-content: center;
 }
 
 .work__title {
-    font-size: var(--normal-font-size);
-    font-weight: var(--font-medium);
-    margin-bottom: var(--mb-0-5);
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-medium);
+  margin-bottom: var(--mb-0-5);
 }
 
 .link__container {
-    display: flex;
-    justify-content: space-between;
-}
-
-.link__container1 {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 3rem;
 }
 
 .work__button {
-    color: var(--text-color);
-    font-size: var(--small-font-size);
-    display: flex;
-    align-items: center;
-    column-gap: 0.25rem;
+  color: var(--text-color);
+  font-size: var(--small-font-size);
+  display: flex;
+  align-items: center;
+  column-gap: 0.25rem;
 }
 
 .work__button-icon {
-    font-size: 1rem;
-    transition: 0.4s;
+  font-size: 1rem;
+  transition: 0.4s;
 }
 
 .work__button:hover .work__button-icon {
-    transform: translateX(0.25rem);
+  transform: translateX(0.25rem);
 }
 
 /*active work*/
 .active-work {
-    background-color: var(--title-color);
-    color: var(--container-color);
+  background-color: var(--title-color);
+  color: var(--container-color);
+}
+
+.tech__stack {
+  display: flex;
+  align-items: center;
+  margin-bottom: var(--mb-1);
+}
+
+.reversed {
+    flex-direction: row-reverse;
 }
 
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
 @media screen and (max-width: 992px) {
-    .link__container1 {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 0rem;
-    }
 
-    .work__container {
-        gap: 1.25rem;
-    }
+    .work__section {
+        display: flex;
+        text-align: center;
+      }
 
     .work__card {
-        padding: 1rem;
-    }
+        display: flex;
+        flex-direction: column;
+        background-color: var(--container-color);
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        padding: 1.25rem;
+        border-radius: 1rem;
+        gap: 1rem;
+        margin: 0 15rem;
+      }
 
-    .work__img {
-        margin-bottom: 0.75rem;
-    }
+  .work__container {
+    gap: var(--mb-2);
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+    height: auto;
+    width: 100%;
+  }
 
-    .work-title {
-        margin-bottom: 0.25rem;
-    }
+  /* .work__container {
+    grid-template-columns: repeat(2, max-content);
+    gap: 3rem;
+    justify-content: center;
+  } */
+
+  .work__img {
+    margin-bottom: 0.75rem;
   }
-  
-  /* For medium devices */
-  @media screen and (max-width: 768px) {
-    .work__container {
-        grid-template-columns: max-content;
-    }
+
+  .work-title {
+    margin-bottom: 0.25rem;
   }
-  
-  @media screen and (max-width: 576px) {
-    .work__container {
-        grid-template-columns: 1fr;
-    }
-    .work__img {
+  .link__container {
+    margin-top: 0rem;
+  }
+
+  .tech__stack {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: var(--mb-1);
+  }
+}
+
+/* For medium devices */
+@media screen and (max-width: 768px) {
+      .work__img {
         width: 100%;
-    }
+        border-radius: 1rem;
+        margin-bottom: var(--mb-1);
+        justify-content: center;
+      }
+      .work__card { 
+        margin: 0 8rem;
+      }
+}
+
+@media screen and (max-width: 576px) {
+
+      .work__card { 
+        margin: 0 0rem;
+      }
+
+  .work__section {
+    display: flex;
+    text-align: center;
+  }
+
+  .work__container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+    height: auto;
+    width: 100%;
+  }
+
+  .work__img {
+    width: 100%;
+    border-radius: 1rem;
+    margin-bottom: var(--mb-1);
+    justify-content: center;
+  }
+
+  .work__text {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    justify-content: center;
+    text-align: center;
   }
   
-  /* For small devices */
-  @media screen and (max-width: 350px) {
-    .work__item {
-        font-size: var(--small-font-size);
-    }
-    .work__filters {
-        column-gap: 0.25rem;
-    }
+}
+
+/* For small devices */
+@media screen and (max-width: 350px) {
+  .work__item {
+    font-size: var(--small-font-size);
   }
+  .work__filters {
+    column-gap: 0.25rem;
+  }
+}
